--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
     border-radius: 16px;
     padding: 20px;
     background: transparent;
-    box-shadow: 0px 3px 15px  rgb(222, 221, 226) ;
+    box-shadow: 0px 3px 15px  rgb(18, 2, 82) ;
 }
 
 input{
@@ -29,6 +29,7 @@ input{
     font-size: 40px;
     text-align: right;
     cursor: pointer;
+    color: white;
 }
 input ::placeholder{
     color: white;
@@ -43,6 +44,7 @@ button{
     color: white;
     font-size: 20px;
     box-shadow: -3px -3px 15px rgb(53, 21, 182);
+    filter: blur(75%);
     cursor: pointer;
 }
 .eql{
@@ -51,4 +53,9 @@ button{
 }
 .operator{
     color: rgb(221, 181, 5);
+}
+h2{
+    color: white;
+    align-items: center;
+    text-align: center;
 }
